--- a/loan-prediction-main/loan-approval.ipynb
+++ b/loan-prediction-main/loan-approval.ipynb
@@ -12262,7 +12262,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We'll be using XGBoost, KNN and Random Forest"
+    "We'll be using XGBoost, DT and Random Forest"
    ]
   },
   {
